# sysrepo-plugin-system

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CODEOWNERS  README.md
CMakeModules/: FindLIBSDBUSCPP.cmake  FindLIBSYSTEMD.cmake  FindSYSREPO.cmake  FindUMGMT.cmake
cmake/Modules/: FindLIBSYSTEMD.cmake  FindSRPC.cmake
docker/: Dockerfile  README.md
docs/: DEVELOPMENT.md  SYSTEMD_AUGYANG.md
examples/: authentication.xml  authorized-key.xml  dns-resolver.xml  hostname.xml  ntp-enabled.xml  ntp.xml  set_datetime.xml  system.xml  system_restart.xml  system_shutdown.xml  timezone-name.xml
src/: Context.hpp  Plugin.cpp  Plugin.hpp  callbacks.c  callbacks.h  common.c  common.h  context.h  dns_resolver.c  dns_resolver.h  general.c  general.h  initial_load.c  initial_load.h  ly_tree.c  ly_tree.h  main.c  plugin.c  plugin.cpp  plugin.h  plugin.hpp  startup.c  startup.h  system.c  system.h  types.h  user_authentication.c
src/api/: dns_resolver.c  dns_resolver.h  ntp.c  ntp.h
src/api/dns_resolver/: search.c  search.h  server.c  server.h
src/api/ntp/: server.c  server.h
src/core/: api.cpp  api.hpp  callbacks.hpp  common.c  common.cpp  common.hpp  context.cpp  context.h  context.hpp  ip.cpp  ip.hpp  ly_tree.c  module-registry.hpp  module.hpp  sdbus.hpp  types.hpp
src/core/api/system/: change.h  check.c  check.h  load.h  store.c  store.h
src/core/api/system/authentication/: change.c  change.h  check.c  check.h  load.c  load.h  store.c  store.h
src/core/api/system/dns_resolver/: change.c  change.h  check.c  check.h  load.c  load.h  store.c  store.h
src/core/api/system/ntp/: change.c  change.h  check.c  check.h  load.c  load.h  store.c  store.h
src/core/data/system/: ip_address.h
src/core/data/system/authentication/: authorized_key.h  local_user.c  local_user.h
src/core/data/system/dns_resolver/: search.h  server.c  server.h
src/core/data/system/ntp/: server.c  server.h
src/core/startup/: load.c  load.h  store.c  store.h
src/core/sub/: change.cpp  change.hpp  oper.cpp  oper.hpp  rpc.cpp  rpc.hpp
src/core/subscription/: change.c  operational.c  rpc.c  rpc.h
src/core/system/: auth.cpp  auth.hpp  dns.cpp  dns.hpp  hostname.cpp  hostname.hpp  ip.cpp  ip.hpp  timezone-name.cpp  timezone-name.hpp
src/core/system-state/: clock.cpp  clock.hpp  platform.cpp  platform.hpp
src/core/yang/: tree.cpp  tree.hpp
src/cpp/: main.cpp
src/data/: DNS.hpp  IP.hpp  dns_resolver.c  dns_resolver.h  ip_address.c  ip_address.h  ntp.c  ntp.h
src/data/dns_resolver/: search.c  server.c
src/data/dns_resolver/search/: list.c  list.h
src/data/dns_resolver/server/: list.c  list.h
src/data/ntp/: server.c
src/data/ntp/server/: array.c
src/modules/: auth.cpp  auth.hpp  dns.cpp  dns.hpp  hostname.cpp  hostname.hpp  ntp.cpp  ntp.hpp  system.cpp  system.hpp  timezone-name.cpp  timezone-name.hpp
src/plugin/: common.h  context.h  ly_tree.c
src/plugin/api/system/: change.h  check.h  load.c  load.h  store.c  store.h
src/plugin/api/system/authentication/: change.c  check.c  check.h  load.c  store.h
src/plugin/api/system/dns_resolver/: change.c  check.c  load.c  load.h
src/plugin/api/system/ntp/: change.c  change.h  check.c  load.c  store.c
src/plugin/data/system/: ip_address.h
src/plugin/data/system/authentication/: local_user.c  local_user.h
src/plugin/data/system/dns_resolver/: search.h  server.h
src/plugin/startup/: load.c  load.h  store.c
src/plugin/subscription/: change.c  operational.h  rpc.c
src/plugins/ietf-system/: CMakeLists.txt  plugin.c
src/plugins/ietf-system-augeas/: CMakeLists.txt  plugin.c  plugin.h
src/plugins/ietf-system-augeas/datastore/running/: load.c  load.h  store.c  store.h
src/plugins/ietf-system/datastore/running/: load.c  load.h  store.c  store.h
src/startup/: load.c  load.h  store.c  store.h
src/subscription/: change.c  change.h  operational.c  operational.h  rpc.c  rpc.h
src/subscription/change/: dns_resolver.c  dns_resolver.h
src/system/api/: change.c  change.h  check.c  check.h  load.c  load.h  store.c  store.h
src/system/api/authentication/: change.c  change.h  check.c  check.h  load.c  load.h  store.c  store.h
src/system/api/dns_resolver/: change.c  change.h  check.c  check.h  load.c  load.h  store.c  store.h
src/system/api/ntp/: change.c  change.h  check.c  check.h  load.c  load.h  store.c  store.h
src/system/authentication/api/: change.h  load.c  load.h  store.h
src/system/authentication/data/: authorized_key.c  authorized_key.h  local_user.c  local_user.h
src/system/data/: ip_address.c  ip_address.h
src/system/data/authentication/: authorized_key.c  authorized_key.h  local_user.c  local_user.h
src/system/data/dns_resolver/: search.c  search.h  server.c  server.h
src/system/data/ntp/: server.c  server.h
src/system/dns_resolver/api/: change.c  change.h  load.c  load.h  store.c  store.h
src/system/ntp/data/: server.h
src/utils/: memory.c  memory.h
src/utils/dns/: resolv_conf.c  resolv_conf.h  search.c  search.h  server.c  server.h
src/utils/ntp/: server_list.c  server_list.h
src/utils/user_auth/: user_authentication.c  user_authentication.h
src/utils/uthash/: utarray.h
tests/: Tests.cmake  general_utest.c  manual_tests.md  system_utest.c
tests/integration/: README.md  ietf-system.py  robotidy.toml  run_robot_ietf_system_tests.sh  system_contact.xml  system_hostname.xml  system_location.xml
tests/integration/data/: system_dns_search.xml  system_local_user_initial.xml  system_ntp_disabled.xml  system_ntp_enabled.xml  system_ntp_server_add.xml  system_ntp_server_initial.xml  system_ntp_server_remove.xml  system_set_timezone_name.xml
tests/integration/robot-ietf-system/: README.md  SystemInit.resource  SystemKeywords.py  SystemKeywords.resource  SystemVariables.py  __init__.py  __init__.robot
tests/integration/robot-ietf-system/tests/: ContactTests.robot  DateTimeTests.robot  DummyTests.robot  HostNameTests.robot  LocationTests.robot  NTPTests.robot  PlatformTests.robot  TimezoneTests.robot
tests/unit/: Tests.cmake  system_utest.c
(+41 files in other folders)
